Fix header image bug. On large pages image was left aligned.

--- a/www/gui.css
+++ b/www/gui.css
@@ -26,7 +26,7 @@ pre {
 	background-color: #435370;
 }
 .pgheader {
-	background: url("header_bg.gif") top left no-repeat;
+	background: #435370 url("header_bg.gif") top right no-repeat;
 }
 .pgheadertext {
 	font-size: 18px;
